package Motus.util;

public class LexiqueFr {
    public int tailleMin;
    public int tailleMax;

    public LexiqueFr(int tailleMin, int tailleMax) {
        this.tailleMin = tailleMin;
        this.tailleMax = tailleMax;
    }

    public LexiqueFr() {

    }
}
